--- a/app/assets/css/channelDetail.less
+++ b/app/assets/css/channelDetail.less
@@ -102,6 +102,11 @@
     color: @white;
   }
 
+  .tab-title{
+    font-family: RobotoBold;
+    vertical-align: top;
+  }
+
   .new-channel-name{
     border: none;
     font-family: Roboto;
@@ -201,5 +206,16 @@
     margin-top: 40px;
   }
 
+}
+.icon-tab-channel{
+  font-size:25px;
+  margin-top:5px;
+}
+.padding-10px{
+  padding:10px;
+}
 
+.span-tab{
+  line-height: 50px;
+  text-align: center;
 }
