--- a/app/assets/css/channelDetail.css
+++ b/app/assets/css/channelDetail.css
@@ -110,6 +110,10 @@
   background-color: #3FA9F5;
   color: white;
 }
+#new_channel .tab-title {
+  font-family: RobotoBold;
+  vertical-align: top;
+}
 #new_channel .new-channel-name {
   border: none;
   font-family: Roboto;
@@ -193,4 +197,15 @@
 }
 #new_channel .container-hour {
   margin-top: 40px;
+}
+.icon-tab-channel {
+  font-size: 25px;
+  margin-top: 5px;
+}
+.padding-10px {
+  padding: 10px;
+}
+.span-tab {
+  line-height: 50px;
+  text-align: center;
 }
