--- a/app/assets/css/channelDetail.less
+++ b/app/assets/css/channelDetail.less
@@ -156,9 +156,9 @@
   }
 
   .btn-delete-settings{
-    border: 1px solid @red;
+    border: 1px solid @delete;
     background-color: @white;
-    color: @red;
+    color: @delete;
     margin-top: 20px;
     margin-right: 5px;
     font-weight: bold;
@@ -166,9 +166,9 @@
   }
 
   .btn-block-settings{
-    border: 1px solid @grey;
+    border: 1px solid @mid-grey;
     background-color: @white;
-    color: @grey;
+    color: @mid-grey;
     margin-top: 20px;
     font-weight: bold;
     padding: 10px;
@@ -191,13 +191,10 @@
   }
 
   .table-day-text{
-    font-size: 18px;
+    font-size: 16px;
     color: @day-text-grey !important;
     span{
-      font-size: 18px;
-      color: @day-text-grey !important;
-    }
-    &::-webkit-input-placeholder {
+      font-size: 16px;
       color: @day-text-grey !important;
     }
   }
