--- a/app/assets/css/colors.less
+++ b/app/assets/css/colors.less
@@ -8,6 +8,7 @@
 @border-grey: #CCCCCC;
 @day-text-grey: #444444;
 @red: #D93E5F;
+@delete: #E62726;
 @green : #24C40D;
 @white: white;
 @black: black;
