--- a/app/assets/css/channelDetail.css
+++ b/app/assets/css/channelDetail.css
@@ -156,18 +156,18 @@
   margin-left: 10px;
 }
 #new_channel .btn-delete-settings {
-  border: 1px solid #D93E5F;
+  border: 1px solid #E62726;
   background-color: white;
-  color: #D93E5F;
+  color: #E62726;
   margin-top: 20px;
   margin-right: 5px;
   font-weight: bold;
   padding: 10px;
 }
 #new_channel .btn-block-settings {
-  border: 1px solid #808080;
+  border: 1px solid #939393;
   background-color: white;
-  color: #808080;
+  color: #939393;
   margin-top: 20px;
   font-weight: bold;
   padding: 10px;
@@ -185,14 +185,11 @@
   margin-bottom: 30px;
 }
 #new_channel .table-day-text {
-  font-size: 18px;
+  font-size: 16px;
   color: #444444 !important;
 }
 #new_channel .table-day-text span {
-  font-size: 18px;
-  color: #444444 !important;
-}
-#new_channel .table-day-text::-webkit-input-placeholder {
+  font-size: 16px;
   color: #444444 !important;
 }
 #new_channel .container-hour {
