--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -5,6 +5,7 @@
 @import "channelDetail";
 @import "md-picker";
 @import "animation";
+@import "checkbox";
 
 *{
   font-family: Roboto;
@@ -532,3 +533,10 @@ input, textarea {
   border-right: 1px solid @light-grey;
 }
 
+.no-glow{
+  outline: none;
+  border: none !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+}
