added list author_

--- a/app/assets/css/colors.less
+++ b/app/assets/css/colors.less
@@ -6,7 +6,7 @@
 @grey:#808080;
 @light-grey: #E5E5E5;
 @border-grey: #CCCCCC;
-@day-text-grey: #444444;
+@day-text-grey: @mid-grey;
 @red: #D93E5F;
 @delete: #E62726;
 @green : #24C40D;
