--- a/app/assets/css/checkbox.less
+++ b/app/assets/css/checkbox.less
@@ -5,11 +5,13 @@
   height: 30px;
   border: 1px solid @blue-tab;
   background-color: @white;
-  i {
+  span.icon-check {
     color: @white;
-    font-size: 200%;
+    font-size: 20px;
     text-align: center;
-    margin-left: 3px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -17,11 +19,13 @@
   border: 1px solid @blue-tab;
   background-color: @blue-tab;
 
-  i {
-    color: white;
-    font-size: 200%;
+  span.icon-check {
+    color: @white;
+    font-size: 20px;
     text-align: center;
-    margin-left: 3px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -32,7 +36,8 @@
   background-color: white;
   border-radius: 100%;
   line-height: 30px;
-  i {
+
+  span.icon-check {
     color: white;
     font-size: 160%;
     text-align: center;
@@ -47,7 +52,7 @@
   border: 1px solid @blue-tab;
   background-color: @blue-tab;
 
-  i {
+  span.icon-check {
     color: white;
     font-size: 160%;
     text-align: center;
@@ -59,4 +64,32 @@
 
 *:focus {
   outline: none !important;
+}
+
+.flag-with-scroll .flag-span-title {
+  display: block;
+  overflow: auto;
+  max-height: 60px;
+}
+/*
+   *  STYLE 2
+   */
+
+.flag-span-title{
+  font-family: RobotoBold;
+  color: @mid-grey;
+
+}
+.flag-span-title::-webkit-scrollbar-track {
+  /*-webkit-box-shadow: inset 0 0 6px @grey;*/
+  background-color: #F5F5F5;
+}
+.flag-span-title::-webkit-scrollbar {
+  width: 12px;
+  background-color: #F5F5F5;
+}
+.flag-span-title::-webkit-scrollbar-thumb {
+  height: 12px;
+  /*-webkit-box-shadow: inset 0 0 6px @grey;*/
+  background-color: #BEBEBE;
 }
