--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -540,3 +540,11 @@ input, textarea {
   -moz-box-shadow: none !important;
   box-shadow: none !important;
 }
+
+.author-name{
+  padding-bottom: 10px !important;
+  margin-bottom: 10px !important;
+  border-bottom: 2px solid @light-grey;
+  color: @black;
+  font-size:16px;
+}
