--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3864,3 +3864,9 @@ textarea {
   color: black;
   font-size: 16px;
 }
+.margin-bottom-10px {
+  margin-bottom: 10px;
+}
+.width-60px {
+  width: 60px !important;
+}
