--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -548,3 +548,11 @@ input, textarea {
   color: @black;
   font-size:16px;
 }
+
+.margin-bottom-10px{
+  margin-bottom: 10px;
+}
+
+.width-60px{
+  width: 60px !important;
+}
