added correct body for tabs

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3870,3 +3870,9 @@ textarea {
 .width-60px {
   width: 60px !important;
 }
+.dropdown-menu {
+  max-height: 300px;
+  /*Provide height in pixels or in other units as per your layout*/
+  overflow-y: auto;
+  /*Provide an auto overflow to diaply scroll*/
+}
