--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -556,3 +556,8 @@ input, textarea {
 .width-60px{
   width: 60px !important;
 }
+
+.dropdown-menu{
+  max-height: 300px; /*Provide height in pixels or in other units as per your layout*/
+  overflow-y: auto; /*Provide an auto overflow to diaply scroll*/
+}
