--- a/app/assets/css/channelDetail.css
+++ b/app/assets/css/channelDetail.css
@@ -34,6 +34,21 @@
 #new_channel {
   color: #939393;
 }
+#new_channel .show-psw-icon {
+  position: absolute;
+  right: 10%;
+  top: 45%;
+  font-size: 20px;
+  -webkit-user-select: none;
+  /* Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+/Edge */
+  user-select: none;
+  /* Standard */
+  cursor: pointer;
+}
 #new_channel .nav-tabs {
   height: 50px;
 }
@@ -60,6 +75,9 @@
   vertical-align: 40%;
 }
 #new_channel #tab2 > a > .ng-scope > label {
+  vertical-align: 20%;
+}
+#new_channel #tab3 > a > .ng-scope > label {
   vertical-align: 20%;
 }
 #new_channel li > a > .ng-scope > label {
@@ -89,22 +107,34 @@
   vertical-align: bottom;
 }
 #new_channel #tab2 > a {
-  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
   border-top-left-radius: 0;
   border: 1px solid #CCCCCC;
+  border-right: 0;
   border-left: 0;
 }
 #new_channel #tab2 > a > .ng-scope > .icon-tab {
+  font-size: 35px;
+  font-weight: normal;
+  padding-right: 10px;
+}
+#new_channel #tab3 > a {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  border: 1px solid #CCCCCC;
+}
+#new_channel #tab3 > a > .ng-scope > .icon-tab {
   font-size: 30px;
   font-weight: normal;
   padding-right: 10px;
   vertical-align: 10%;
 }
 #new_channel #tab0 {
-  border-top-left-radius: 5px;
+  border-top-left-radius: 10px;
 }
-#new_channel #tab2 {
-  border-top-right-radius: 5px;
+#new_channel #tab3 {
+  border-top-right-radius: 10px;
 }
 #new_channel .nav-tabs > li.active > a {
   background-color: #3FA9F5;
