--- a/app/assets/css/channelDetail.css
+++ b/app/assets/css/channelDetail.css
@@ -192,7 +192,8 @@
   margin-top: 20px;
   margin-right: 5px;
   font-weight: bold;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 #new_channel .btn-block-settings {
   border: 1px solid #939393;
@@ -200,7 +201,8 @@
   color: #939393;
   margin-top: 20px;
   font-weight: bold;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 #new_channel .btn-save-settings {
   border: 1px solid #24C40D;
@@ -208,7 +210,8 @@
   color: #24C40D;
   margin-top: 20px;
   font-weight: bold;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   float: right;
 }
 #new_channel .container-modifier {
