--- a/app/assets/css/channelDetail.less
+++ b/app/assets/css/channelDetail.less
@@ -196,7 +196,8 @@
     margin-top: 20px;
     margin-right: 5px;
     font-weight: bold;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .btn-block-settings{
@@ -205,7 +206,8 @@
     color: @mid-grey;
     margin-top: 20px;
     font-weight: bold;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .btn-save-settings{
@@ -214,7 +216,8 @@
     color: @green;
     margin-top: 20px;
     font-weight: bold;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     float: right;
   }
 
