added html editor

--- a/app/assets/css/channelDetail.css
+++ b/app/assets/css/channelDetail.css
@@ -80,6 +80,9 @@
 #new_channel #tab3 > a > .ng-scope > label {
   vertical-align: 20%;
 }
+#new_channel #tab-last > a > .ng-scope > label {
+  vertical-align: 20%;
+}
 #new_channel li > a > .ng-scope > label {
   margin-right: 20px;
   vertical-align: 35%;
@@ -130,10 +133,24 @@
   padding-right: 10px;
   vertical-align: 10%;
 }
+#new_channel #tab-last > a {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  border: 1px solid #CCCCCC;
+}
+#new_channel #tab-last > a > .ng-scope > .icon-tab {
+  font-size: 30px;
+  font-weight: normal;
+  padding-right: 10px;
+  vertical-align: 10%;
+}
 #new_channel #tab0 {
   border-top-left-radius: 10px;
 }
 #new_channel #tab3 {
+  border-top-right-radius: 10px;
+}
+#new_channel #tab-last {
   border-top-right-radius: 10px;
 }
 #new_channel .nav-tabs > li.active > a {
@@ -148,6 +165,13 @@
   border: none;
   font-family: Roboto;
   font-size: 18px;
+  margin-left: -10px;
+  margin-bottom: 10px;
+}
+#new_channel .new-channel-title {
+  border: none;
+  font-family: RobotoSlabBold;
+  font-size: 20px;
   margin-left: -10px;
   margin-bottom: 10px;
 }
@@ -195,6 +219,13 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
+#new_channel .btn-delete-settings:hover,
+#new_channel .btn-delete-settings:focus,
+#new_channel .btn-delete-settings:active {
+  border: 1px solid #E62726 !important;
+  background-color: white;
+  color: #E62726 !important;
+}
 #new_channel .btn-block-settings {
   border: 1px solid #939393;
   background-color: white;
@@ -204,6 +235,13 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
+#new_channel .btn-block-settings:hover,
+#new_channel .btn-block-settings:focus,
+#new_channel .btn-block-settings:active {
+  border: 1px solid #939393 !important;
+  background-color: white;
+  color: #939393 !important;
+}
 #new_channel .btn-save-settings {
   border: 1px solid #24C40D;
   background-color: white;
@@ -212,7 +250,46 @@
   font-weight: bold;
   padding-top: 10px;
   padding-bottom: 10px;
-  float: right;
+}
+#new_channel .btn-save-settings:hover,
+#new_channel .btn-save-settings:focus,
+#new_channel .btn-save-settings:active {
+  border: 1px solid #24C40D !important;
+  background-color: white;
+  color: #24C40D !important;
+}
+#new_channel .btn-save-bozza-settings {
+  border: 1px solid #48AACC;
+  background-color: white;
+  color: #48AACC;
+  margin-top: 20px;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+#new_channel .btn-save-bozza-settings:hover,
+#new_channel .btn-save-bozza-settings:focus,
+#new_channel .btn-save-bozza-settings:active {
+  border: 1px solid #48AACC !important;
+  background-color: white;
+  color: #48AACC !important;
+}
+#new_channel .btn-pubblica-settings {
+  border: 1px solid #24C40D;
+  background-color: white;
+  color: #24C40D;
+  margin-top: 20px;
+  margin-left: 10px;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+#new_channel .btn-pubblica-settings:hover,
+#new_channel .btn-pubblica-settings:focus,
+#new_channel .btn-pubblica-settings:active {
+  border: 1px solid #24C40D !important;
+  background-color: white;
+  color: #24C40D !important;
 }
 #new_channel .container-modifier {
   margin-bottom: 30px;
