--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -11,6 +11,10 @@
 *{
   font-family: Roboto;
 }
+
+.font-w-100{
+  font-weight: 100 !important;
+}
 /* Space out content a bit */
 body {
   padding-top: 1.5rem;
@@ -42,6 +46,13 @@ html{
   margin-top: 0;
   margin-bottom: 0;
   line-height: 3rem;
+}
+
+.margin-left-0{
+  margin-left:0px;
+}
+.margin-top-15px{
+  margin-top:15px !important;
 }
 .margin-top-50px{
   margin-top:50px !important;
@@ -79,6 +90,10 @@ html{
 }
 .marketing p + h4 {
   margin-top: 1.5rem;
+}
+
+.font-xs{
+  font-size: 10px;
 }
 
 .font-small{
@@ -483,7 +498,7 @@ input, textarea {
     margin-top:40px;
   }
   .page_content{
-    margin-top:5px
+    margin-top:5px;
   }
 }
 
