counter for html text

--- a/app/assets/css/channelDetail.less
+++ b/app/assets/css/channelDetail.less
@@ -53,6 +53,12 @@
     vertical-align: 20%;
   }
 
+  .border-left-tab{
+    border-bottom-left-radius: 0 !important;
+    border-top-left-radius: 0 !important;
+    border-left: 1px solid @border-grey !important;
+  }
+
   #tab3 > a > .ng-scope > label {
     vertical-align: 20%;
   }
