--- a/app/assets/css/channelDetail.css
+++ b/app/assets/css/channelDetail.css
@@ -77,6 +77,11 @@
 #new_channel #tab2 > a > .ng-scope > label {
   vertical-align: 20%;
 }
+#new_channel .border-left-tab {
+  border-bottom-left-radius: 0 !important;
+  border-top-left-radius: 0 !important;
+  border-left: 1px solid #CCCCCC !important;
+}
 #new_channel #tab3 > a > .ng-scope > label {
   vertical-align: 20%;
 }
