--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3392,6 +3392,9 @@ http://kudakurage.com/ligature_symbols/
   line-height: 50px;
   text-align: center;
 }
+.search-edition {
+  margin-bottom: 12px !important;
+}
 .md-datepicker-button {
   display: none;
 }
@@ -4102,4 +4105,7 @@ textarea {
 }
 .no-margin-left {
   margin-left: 0px !important;
+}
+.no-padding-left {
+  padding-left: 0 !important;
 }
