--- a/app/assets/css/md-picker.less
+++ b/app/assets/css/md-picker.less
@@ -37,6 +37,12 @@
 
 }
 
+.modal-data-filter{
+  width: 100% !important;
+  .md-datepicker-input-container{
+    width: 90% !important;
+  }
+}
 
 .md-calendar-selected-date{
   .md-calendar-date-selection-indicator{
