--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -9,6 +9,7 @@
 @import "toastr";
 @import "editor";
 @import "vittorio";
+@import "vittorioDashboard";
 
 *{
   font-family: Roboto;
@@ -51,7 +52,13 @@ html{
 }
 
 .margin-left-0{
-  margin-left:0px;
+  margin-left:0 !important;
+}
+.margin-left-15px{
+  margin-left: 15px !important;
+}
+.margin-left-55px{
+  margin-left: 55px !important;
 }
 .margin-top-5px{
   margin-top:5px !important;
@@ -62,8 +69,17 @@ html{
 .margin-top-50px{
   margin-top:50px !important;
 }
+.margin-top-80px{
+  margin-top: 80px !important;
+}
+.margin-right-5px{
+  margin-right: 5px !important;
+}
 .margin-right-10px{
   margin-right: 10px !important;
+}
+.margin-right-15px{
+  margin-right: 15px !important;
 }
 .margin-bottom-30px{
   margin-bottom: 30px !important;
@@ -221,8 +237,14 @@ html{
 .padding-top-15{
   padding-top: 15px;
 }
+.padding-bottom-30px{
+  padding-bottom: 30px !important;
+}
 .no-margin{
   margin: 0 !important;
+}
+.no-margin-bottom{
+  margin-bottom: 0 !important;
 }
 .space-15{
   height: 15px;
@@ -293,6 +315,12 @@ form.communityform {
 .padding-15per{
   padding-left: 15%;
   padding-right: 15%
+}
+.padding-left-15px{
+  padding-left: 15px !important;
+}
+.padding-right-15px{
+  padding-right: 15px !important;
 }
 
 .btn.active.focus,
@@ -594,7 +622,10 @@ input, textarea {
 }
 
 .margin-bottom-10px{
-  margin-bottom: 10px;
+  margin-bottom: 10px !important;
+}
+.margin-bottom-60px{
+  margin-bottom: 60px !important;
 }
 
 .width-60px{
