added check for modal

--- a/app/components/mediamodal/mediamodal.view.html
+++ b/app/components/mediamodal/mediamodal.view.html
@@ -6,7 +6,7 @@
                     <button class="btn btn-green-modal right-rounded pull-left" ngf-select="fileSelect($files)"  ngf-multiple="true">
                         <span class="lsf">plus</span>&nbsp;&nbsp;&nbsp;&nbsp;CARICA IMMAGINI
                     </button>
-                    <button class="btn btn-green-modal left-rounded pull-left" ngf-select="videoSelect($file)">
+                    <button class="btn btn-green-modal left-rounded pull-left" ngf-select="videoSelect($file)" ladda="options.laddaVideo" data-style="expand-right" data-spinner-color="#FFFFFF">
                         CARICA VIDEO
                     </button>
 
