--- a/app/components/mediamodal/mediamodal.view.html
+++ b/app/components/mediamodal/mediamodal.view.html
@@ -3,10 +3,15 @@
         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
             <div class="row no-padding no-margin">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding no-margin" style="margin-top:20px !important;">
-                    <button class="btn btn-green-modal right-rounded pull-left" ngf-select="fileSelect($files)"  ngf-multiple="true">
+                    <button class="btn btn-green-modal right-rounded pull-left" ng-class="{'left-rounded': isGallery}" ngf-select="fileSelect($files)"  ngf-multiple="true">
                         <span class="lsf">plus</span>&nbsp;&nbsp;&nbsp;&nbsp;CARICA IMMAGINI
                     </button>
-                    <button class="btn btn-green-modal left-rounded pull-left" ngf-select="videoSelect($file)" ladda="options.laddaVideo" data-style="expand-right" data-spinner-color="#FFFFFF">
+                    <button class="btn btn-green-modal left-rounded pull-left"
+                            ng-if="!isGallery"
+                            ngf-select="videoSelect($file)"
+                            ladda="options.laddaVideo"
+                            data-style="expand-right"
+                            data-spinner-color="#FFFFFF">
                         CARICA VIDEO
                     </button>
 
