--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -54,6 +54,9 @@ html{
 .margin-left-0{
   margin-left:0 !important;
 }
+.margin-left-10px{
+  margin-left: 10px !important;
+}
 .margin-left-15px{
   margin-left: 15px !important;
 }
@@ -80,6 +83,9 @@ html{
 }
 .margin-right-15px{
   margin-right: 15px !important;
+}
+.margin-bottom-20px{
+  margin-bottom: 20px !important;
 }
 .margin-bottom-30px{
   margin-bottom: 30px !important;
