--- a/app/assets/css/vittorioDashboard.css
+++ b/app/assets/css/vittorioDashboard.css
@@ -82,3 +82,57 @@
   font-weight: bold;
   color: #48AACC;
 }
+#commenti .border-radius {
+  border-radius: 5px;
+}
+#commenti .border-grey {
+  border: 1px solid #CCCCCC;
+}
+#commenti .font-sl {
+  font-size: 19px;
+}
+#commenti .font-xl {
+  font-size: 22px;
+}
+#commenti .font-xxl {
+  font-size: 24px;
+}
+#commenti .display-flex {
+  display: flex;
+}
+#commenti .btn-transparent {
+  border: 1px solid rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0);
+  color: #808080;
+  font-weight: bold;
+}
+#commenti .width-25px {
+  width: 25px;
+}
+#commenti .height-25px {
+  height: 25px;
+}
+#commenti .img-medium {
+  height: 35px;
+  width: 35px;
+}
+#commenti .select-grey {
+  font-family: RobotoMedium !important;
+  font-weight: bold;
+  background-color: white;
+  color: #939393;
+  border: 1px solid #939393 !important;
+  border-radius: 5px;
+  font-size: 14px;
+  padding: 5px 5px;
+  margin-top: 10px;
+}
+#commenti .select-grey > div > span {
+  font-weight: bold;
+  color: #939393;
+  border-bottom: 0;
+}
+#commenti .select-grey > div > span > span {
+  font-weight: bold;
+  color: #939393;
+}
