--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -783,8 +783,8 @@ input, textarea {
 #segnalazioni{
 
   .img-see-segnalation{
-    height: 50px;
-    width: 50px;
+    height: 30px;
+    width: 30px;
   }
 
   .select-blue{
@@ -812,6 +812,10 @@ input, textarea {
 }
 
 #commenti{
+  .margin-first-col{
+    width: 90% !important;
+    margin-left: 3% !important;
+  }
   .border-radius{
     border-radius: 5px;
   }
