--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -364,6 +364,20 @@ form.communityform {
   }
 }
 
+.btn-blue-full{
+  font-family: RobotoMedium !important;
+  font-weight: 500;
+  background-color: @blue-tab;
+  color: white;
+  font-size: 14px;
+  padding: 10px 25px;
+
+  &:hover, &:focus, &:active{
+    color: white;
+  }
+}
+
+
 .btn-green-modal{
   -webkit-border-radius:0 !important;
   -moz-border-radius:0 !important;
